fix z-index for floating btn and nav

--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ textarea:focus {
     position: fixed;
     bottom: 75px;
     right: 10px;
-    z-index: 99;
+    z-index: 2;
     font-size: 18px;
     border: none;
     outline: none;
@@ -428,8 +428,8 @@ textarea:focus {
 }
 
 .item:hover {
-    -webkit-transform: scale(1.05);
-    transform: scale(1.05);
+    -webkit-transform: scale(1.03);
+    transform: scale(1.03);
     background-color: #C4C4C4;
     opacity: 0.8;
     transition: transform 0.7s ease-in-out, -webkit-transform 0.7s ease-in-out;
@@ -995,7 +995,7 @@ textarea:focus {
         bottom: 0;
         left: 0;
         right: 0;
-        z-index: 1;
+        z-index: 3;
         transition: all .3s;
         transition-timing-function: ease-in;
         box-shadow: 0px -4px 4px rgba(0, 0, 0, 0.03);
